--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_notification_center.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_notification_center.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<RelativeLayout
     android:id="@+id/root"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
@@ -34,52 +34,54 @@
 
     </RelativeLayout>
 
-    <RelativeLayout
+
+    <LinearLayout
+        android:id="@+id/linearLayoutNoNotifications"
         android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@+id/topRl"
+        android:gravity="center"
+        android:orientation="vertical"
+        >
+        <ImageView
+            android:layout_width="241px"
+            android:layout_height="342px"
+            android:src="@drawable/ic_no_items"
+            android:tag="mwar"
+            />
+
+        <TextView
+            android:id="@+id/textViewNoNotifications"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:layout_marginTop="30px"
+            android:text="No Current Notifications"
+            android:textColor="@color/black"
+            android:textSize="32px"
+            />
+
+    </LinearLayout>
+
+    <android.support.v4.widget.SwipeRefreshLayout
+        android:id="@+id/swipe_refresh_layout"
+        android:layout_width="match_parent"
+        android:layout_below="@+id/topRl"
         android:layout_height="match_parent">
+
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/my_request_recycler"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:fadeScrollbars="true"
+            android:scrollbars="vertical"
             />
 
-        <LinearLayout
-            android:id="@+id/linearLayoutNoNotifications"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:orientation="vertical"
-            android:gravity="center_horizontal"
-            >
-            <ImageView
-                android:layout_width="241px"
-                android:layout_height="342px"
-                android:tag="mwar"
-                android:src="@drawable/ic_no_items"
-                />
+
+    </android.support.v4.widget.SwipeRefreshLayout>
 
 
-            <TextView
-                android:id="@+id/textViewNoNotifications"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerInParent="true"
-                android:text="No Current Notifications"
-                android:textColor="@color/black"
-                android:textSize="32px"
-                android:layout_marginTop="30px"
-                />
-
-        </LinearLayout>
 
 
-        <ImageView
-            android:layout_width="match_parent"
-            android:layout_height="6px"
-            android:background="@drawable/shadow_down"
-            />
-
-    </RelativeLayout>
-
-</LinearLayout>
+</RelativeLayout>
