feature_multiple_language_support: new strings added till datastructure

--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_signin_otp.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_signin_otp.xml
@@ -203,7 +203,7 @@
             android:layout_height="99px"
             android:layout_marginTop="108px"
             android:background="@drawable/orange_btn_selector"
-            android:text="VERIFY"
+            android:text="@string/verify_me"
             android:visibility="gone"
             android:textColor="@drawable/white_color_selector"
             android:textSize="@dimen/button_text_size"/>
