--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activty_edit_driver_profile.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activty_edit_driver_profile.xml
@@ -130,7 +130,7 @@
                         android:layout_marginLeft="42px"
                         android:background="#0000"
                         android:capitalize="words"
-                        android:hint="Name"
+                        android:hint="@string/name"
                         android:singleLine="true"
                         android:textColor="@color/black"
                         android:textColorHint="@color/black_text_alpha"
@@ -160,7 +160,7 @@
                         android:layout_marginLeft="42px"
                         android:layout_toLeftOf="@+id/imageViewEditPhone"
                         android:background="#0000"
-                        android:hint="Phone Number"
+                        android:hint="@string/phone_number"
                         android:inputType="number"
                         android:maxLength="14"
                         android:singleLine="true"
