--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/fragment_share_earn.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/fragment_share_earn.xml
@@ -52,7 +52,7 @@
                         android:layout_marginTop="15px"
                         android:gravity="center"
                         android:singleLine="true"
-                        android:text="Your Referral Code is"
+                        android:text="@string/your_referral_code"
                         android:textColor="@color/black"
                         android:textSize="36px"
                         />
@@ -97,7 +97,7 @@
                         android:layout_gravity="center_horizontal"
                         android:layout_marginTop="32px"
                         android:background="@drawable/new_orange_btn_selector_rounded"
-                        android:text="शेयर करें"
+                        android:text="@string/share"
                         android:textColor="@drawable/white_color_selector"
                         android:textSize="48px"/>
                     <ImageView
