--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_register.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_register.xml
@@ -3,7 +3,7 @@
               xmlns:android="http://schemas.android.com/apk/res/android"
               android:layout_width="720px"
               android:layout_height="1134px"
-              android:background="@drawable/common_bg"
+              android:background="@drawable/spalsh_new_background"
               android:orientation="vertical"
               android:splitMotionEvents="false">
 
@@ -20,7 +20,7 @@
             android:layout_centerVertical="true"
             android:background="@drawable/transparent"
             android:text="@string/back"
-            android:textColor="@color/new_orange"
+            android:textColor="@color/white"
             android:textSize="@dimen/button_text_size"/>
 
         <TextView
@@ -30,7 +30,7 @@
             android:layout_centerInParent="true"
             android:gravity="center"
             android:text="@string/register"
-            android:textColor="@color/new_orange"
+            android:textColor="@color/white"
             android:textSize="@dimen/button_text_size"/>
     </RelativeLayout>
 
