--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/dialog_ride_request_timeout.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/dialog_ride_request_timeout.xml
@@ -50,7 +50,7 @@
                 android:maxHeight="800px"
                 android:layout_gravity="center_horizontal"
                 android:gravity="center"
-                android:text="Message"
+                android:text="@string/message"
                 android:layout_marginTop="32px"
                 android:textColor="@color/black"
                 android:lineSpacingExtra="10px"
