--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/dialog_share_enter_number.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/dialog_share_enter_number.xml
@@ -32,7 +32,7 @@
                 android:layout_marginBottom="40px"
                 android:layout_marginTop="40px"
                 android:gravity="center"
-                android:text="कस्टमर का नंबर डालें"
+                android:text="@string/enter_customer_phone_no"
                 android:textColor="@color/grey_dark_more"
                 android:textSize="48px" />
 
@@ -53,7 +53,7 @@
                     android:gravity="center"
                     android:inputType="number"
                     android:maxLength="10"
-                    android:hint="फोन नंबर "
+                    android:hint="@string/phone_number"
                     android:textSize="44px"
                     android:singleLine="true"
                     android:textColor="@color/grey_black"
