--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_ride_details.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_ride_details.xml
@@ -162,7 +162,7 @@
 
                 <TextView
                     android:id="@+id/textViewRideFare"
-                    android:layout_width="340px"
+                    android:layout_width="400px"
                     android:layout_height="wrap_content"
                     android:gravity="center_vertical"
                     android:layout_marginLeft="38px"
@@ -203,7 +203,7 @@
 
                 <TextView
                     android:id="@+id/textViewConvayenceCharge"
-                    android:layout_width="340px"
+                    android:layout_width="400px"
                     android:layout_height="wrap_content"
                     android:gravity="center_vertical"
                     android:layout_marginLeft="38px"
@@ -243,7 +243,7 @@
 
                 <TextView
                     android:id="@+id/textViewLuggageCharge"
-                    android:layout_width="340px"
+                    android:layout_width="400px"
                     android:layout_height="wrap_content"
                     android:gravity="center_vertical"
                     android:layout_marginLeft="38px"
@@ -281,7 +281,7 @@
 
                 <TextView
                     android:id="@+id/textViewRateApplied"
-                    android:layout_width="340px"
+                    android:layout_width="400px"
                     android:layout_height="wrap_content"
                     android:gravity="center_vertical"
                     android:layout_marginLeft="38px"
@@ -319,7 +319,7 @@
 
                 <TextView
                     android:id="@+id/textViewAcceptSubsidy"
-                    android:layout_width="340px"
+                    android:layout_width="400px"
                     android:layout_height="wrap_content"
                     android:gravity="center_vertical"
                     android:layout_marginLeft="38px"
@@ -358,7 +358,7 @@
 
                 <TextView
                     android:id="@+id/textViewCancelSubsidy"
-                    android:layout_width="340px"
+                    android:layout_width="400px"
                     android:layout_height="wrap_content"
                     android:gravity="center_vertical"
                     android:layout_marginLeft="38px"
@@ -397,7 +397,7 @@
 
                 <TextView
                     android:id="@+id/textViewJugnooCut"
-                    android:layout_width="340px"
+                    android:layout_width="400px"
                     android:layout_height="wrap_content"
                     android:gravity="center_vertical"
                     android:layout_marginLeft="38px"
@@ -504,8 +504,8 @@
                     android:id="@+id/textViewCustomerPaidText"
                     android:layout_width="345px"
                     android:layout_height="wrap_content"
+                    android:layout_marginBottom="5px"
                     android:gravity="center"
-                    android:singleLine="true"
                     android:layout_below="@+id/textViewCustomerPaid"
                     android:text="@string/paid_cash"
                     android:textColor="@color/grey_ride_history"
@@ -513,8 +513,9 @@
 
                 <ImageView
                     android:layout_width="2px"
-                    android:layout_height="115px"
+                    android:layout_height="125px"
                     android:layout_centerHorizontal="true"
+                    android:layout_centerVertical="true"
                     android:id="@+id/imageViewVertical"
                     android:background="@color/new_orange"/>
 
